# scabopdf

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_DEJURE_MASSIME.md  ANALYSIS_DEJURE_NOTE.md  ANALYSIS_GIUFFRE_CODICI.md  ANALYSIS_GIUFFRE_ENCICLOPEDIA.md  CLAUDE.md  LICENSE  README.md  SPECS.md
app/: .eslintrc.js  (+9 more)
pipeline/: README.md  pyproject.toml
pipeline/scripts/: analyze_cross_category_length_distribution.py  analyze_note_length_distribution.py  capture_epub_ipzs_baseline.py  capture_p014_baseline.py  capture_p018_baseline.py  capture_p019_baseline.py  capture_p021_baseline.py  capture_p040_baseline.py  capture_phase3_baseline.py  capture_xml_akn_baseline.py  diagnose_article_number_ocr_corruption.py  diagnose_mosconi_note_geometry.py  diagnose_mosconi_outlier.py  diagnose_ocr_residual_gap.py  generate_schema.py  measure_ocr_pass0_impact.py  regenerate_italian_wordlist.py
pipeline/src/scabopdf_pipeline/: warning_framework.py
pipeline/tests/: conftest.py  snapshot_utils.py
pipeline/tests/fixtures/: README.md
pipeline/tests/integration/: test_epub_ipzs_cli.py  test_epub_ipzs_detector.py  test_epub_ipzs_parser.py  test_layer1_end_to_end.py  test_xml_akn_cli.py  test_xml_akn_detector.py  test_xml_akn_parser.py
pipeline/tests/snapshots/: epub_ipzs_baseline_codice_civile.json  epub_ipzs_baseline_codice_penale.json  epub_ipzs_baseline_codice_procedura_penale.json  epub_ipzs_baseline_codice_strada.json  epub_ipzs_baseline_dlgs_231_2001.json  epub_ipzs_baseline_legge_56_2007.json  epub_ipzs_baseline_legge_bilancio_2023.json  epub_ipzs_baseline_legge_capitali.json  epub_ipzs_baseline_legge_finanziaria_2007.json  (+56 more)
(+549 files in other folders)
