[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scabopdf-pipeline"
version = "0.1.0"
description = "ScaboPDF Layer 1 — PDF extraction pipeline (PyMuPDF + Pydantic)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Scabo" }]
dependencies = [
    "pymupdf>=1.24",
    "pydantic>=2.7",
    "regex>=2024.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["fitz", "pymupdf"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = [
    "--strict-markers",
    "--cov=scabopdf_pipeline",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
source = ["src/scabopdf_pipeline"]
